# stardust

./: Cargo.toml  LICENSE  build.rs  rustfmt.toml
appsample/: Cargo.toml
appsample/src/: app.rs  container.rs  error.rs  main.rs
appsample/tests/: oauth2_server.http  user.http  user_apikey.http
module-oauth2-server/: Cargo.toml
module-oauth2-server/src/: command.rs  entity.rs  lib.rs  query.rs  repository.rs  service.rs
module-oauth2-server/src/infra/: authorization_repo.rs  authorization_repository.rs  client_repo.rs  client_repository.rs  migration.rs  migration_repo.rs  migration_repository.rs  mod.rs  model.rs
module-oauth2-server/src/interface/: container.rs  dto.rs  extract.rs  http.rs  mod.rs
module-oauth2-server/src/internal/: authorization_service.rs  client_service.rs  migration_service.rs  mod.rs
module-sample/: Cargo.toml
module-sample/src/: command.rs  entity.rs  lib.rs  query.rs  repository.rs  service.rs
module-sample/src/infra/: migration.rs  migration_repository.rs  mod.rs
module-sample/src/interface/: container.rs  dto.rs  http.rs  mod.rs
module-sample/src/internal/: migration_service.rs  migration_svc.rs  mod.rs  sample_service.rs
module-user/: Cargo.toml
module-user/src/: command.rs  entity.rs  lib.rs  query.rs  repo.rs  repository.rs  service.rs
module-user/src/inbound/: http.rs
module-user/src/infra/: apikey_repo.rs  apikey_repository.rs  migration.rs  migration_repo.rs  migration_repository.rs  mock.rs  mod.rs  model.rs  user_repo.rs  user_repository.rs
module-user/src/interface/: container.rs  dto.rs  extract.rs  http.rs  mod.rs  user.rs
module-user/src/internal/: apikey_service.rs  apikey_usage_tracker.rs  migration_service.rs  mod.rs  user_service.rs
proto/: hello.proto
stardust/: Cargo.toml  build.rs
stardust-app/: Cargo.toml  build.rs
stardust-app/src/: container.rs  error.rs  grpc_client.rs  grpc_server.rs  main.rs
stardust-app/tests/: module-user.http
stardust-common/: Cargo.toml
stardust-common/assets/: config.example.toml
stardust-common/src/: config.rs  error.rs  hash.rs  lib.rs  logging.rs  utils.rs  with.rs
stardust-core/: Cargo.toml
stardust-core/src/: audit.rs  infra.rs  lib.rs  migration.rs  repository.rs  service.rs
stardust-db/: Cargo.toml
stardust-db/src/: context.rs  database.rs  db.rs  error.rs  handle.rs  lib.rs  mock.rs  with.rs
stardust-db/src/deprecated/: handle.rs  with.rs
stardust-db/src/internal/: mock.rs  mod.rs  postgres.rs  sqlite.rs
stardust-inbound/: Cargo.toml
stardust-inbound/src/grpc/: mod.rs
stardust-inbound/src/http/: axum_adapter.rs  extractor.rs  mod.rs  traceid.rs
stardust-interface/: Cargo.toml
stardust-interface/src/grpc/: mod.rs
stardust-interface/src/http/: axum_adapter.rs  extractor.rs  mod.rs  session.rs  traceid.rs  utils.rs
stardust-sample/: Cargo.toml
stardust-sample/tests/: api.http
stardust-user/: Cargo.toml
stardust-user/src/: lib.rs  repo.rs
stardust-user/src/infra/: migration.rs  mod.rs  user_repo.rs
stardust/src/: config.rs  error.rs  hash.rs  infra.rs  lib.rs  logging.rs  migration.rs  utils.rs  with.rs
stardust/src/database/: mod.rs
stardust/src/database/internal/: mock.rs  mod.rs  postgres.rs  sqlite.rs
stardust/src/grpc/: mod.rs
stardust/src/http/: mod.rs  session.rs  traceid.rs  utils.rs
static/oauth2/: login.html  login.jsx
testenv/: config.test.toml  docker-compose.yml  docker-reset.ps1
