[package]
name = "appsample"
version = "0.1.0"
edition = "2024"

[dependencies]
stardust-common = { path = "../stardust-common" }
stardust-db = { path = "../stardust-db" }
stardust-core = { path = "../stardust-core" }
stardust-interface = { path = "../stardust-interface" }
module-user = { path = "../module-user" }
module-oauth2-server = { path = "../module-oauth2-server" }
anyhow = "1.0.100"
axum = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tower-sessions = "0.14.0"
tower-http = { version = "0.6.7", features = ["full"] }
serde_json = "1.0.145"
