[package]
name = "module-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
stardust-common = { path = "../stardust-common" }
stardust-db = { path = "../stardust-db" }
stardust-core = { path = "../stardust-core" }
stardust-interface = { path = "../stardust-interface" }
module-user = { path = "../module-user" }
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "sqlite",
    "tls-rustls",
] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
async-trait = "0.1.89"
axum = "0.8.6"
tower = "0.5.2"
tower-sessions = "0.14.0"
serde_json = "1.0.145"
urlencoding = "2.1.3"
