[package]
name = "stardust-common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
config = "0.15.18"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }
