[package]
name = "stardust-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "mysql", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
stardust-common = { path = "../stardust-common" }
stardust-db = { path = "../stardust-db" }
serde_json = "1.0.145"
tracing = "0.1.43"
async-trait = "0.1.89"
