[package]
name = "stardust-db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-core = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
stardust-common = { path = "../stardust-common" }
tokio = { version = "1.48.0", features = ["full"] }

