[package]
name = "stardust-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
stardust-common = { path = "../stardust-common" }
serde = "1.0.228"
tower = "0.5.2"
tower-sessions = "0.14.0"
tower-trace = "0.0.0"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["full", "tracing"] }
chrono = "0.4.42"
serde_json = "1.0.145"
