[package]
name = "stardust-user"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
stardust-common = { path = "../stardust-common" }
sqlx = { version = "0.8.6", features = [
    "mysql",
    "postgres",
    "runtime-tokio",
    "sqlite",
    "tls-rustls",
] }
stardust-db = { path = "../stardust-db" }
stardust-core = { path = "../stardust-core" }
tokio = { version = "1.48.0", features = ["full"] }
trading = "0.1.0"
tracing = "0.1.41"
